Release gate: converge Linux installers on canonical staging