@@ -1,263 +1,256 @@
 #!/usr/bin/env bash
 set -Eeuo pipefail
 
-APP_NAME="The Mechanist Launcher"
-APP_ID="the-mechanist-launcher"
-APP_VERSION="0.9.10ix"
-VENDOR="The Mechanist Project"
 PROJECT_ROOT="$(cd "$(dirname "${BASH_SOURCE[0]}")/../.." && pwd)"
-TARGET_DIR="$PROJECT_ROOT/target"
+DISTRIBUTION_ROOT="${MECHANIST_DISTRIBUTION_ROOT:-}"
+PACKAGE_TYPES="app-image,deb,rpm"
 DIST_DIR="$PROJECT_ROOT/dist/installers/linux"
-APP_IMAGE_DIR="$DIST_DIR/app-image"
-RUNTIME_DIR="$PROJECT_ROOT/build/jlink/runtime-launcher-linux"
-INPUT_DIR="$PROJECT_ROOT/build/package-input/linux-launcher"
-ICON_PATH="$PROJECT_ROOT/client/assets/app/icons/the-mechanist-256.png"
-CLIENT_MODULES="$(tr -d '\r\n ' < "$PROJECT_ROOT/packaging/jlink/client-modules.txt")"
-JLINK_OPTIONS=(--strip-debug --no-man-pages --no-header-files --strip-native-commands --compress=2)
-DEPENDENCY_STAGE_DIR="$TARGET_DIR/package-runtime-deps"
-MANIFEST_DIR="$INPUT_DIR/manifests"
-PACKAGE_CACHE_DIR="$INPUT_DIR/packages"
-CLIENT_PACKAGE_DIR="$PACKAGE_CACHE_DIR/client"
-SERVER_PACKAGE_DIR="$PACKAGE_CACHE_DIR/server"
-SUPPORT_LIB_DIR="$PACKAGE_CACHE_DIR/support/lib"
-LAUNCHER_PACKAGE_DIR="$PACKAGE_CACHE_DIR/launcher"
-LAUNCHER_JAVA_DIR="$PROJECT_ROOT/launcher/java"
-LAUNCHER_JAR_SOURCE="$LAUNCHER_JAVA_DIR/target/mechanist-launcher-0.1.0.jar"
-LAUNCHER_JAR="$LAUNCHER_PACKAGE_DIR/MechanistLauncher.jar"
-CLIENT_ASSET_DIR="$CLIENT_PACKAGE_DIR/assets"
-LAUNCHER_PROFILE_SOURCE_DIR="$PROJECT_ROOT/launcher/profile-packages"
-LAUNCHER_ASSET_STAGER="$PROJECT_ROOT/tools/launcher/stage_launcher_profile_assets.py"
-LWJGL_VERSION="3.4.1"
-REQUIRED_LWJGL_FILES=(
-  "lwjgl-$LWJGL_VERSION.jar"
-  "lwjgl-glfw-$LWJGL_VERSION.jar"
-  "lwjgl-opengl-$LWJGL_VERSION.jar"
-  "lwjgl-stb-$LWJGL_VERSION.jar"
-  "lwjgl-$LWJGL_VERSION-natives-linux.jar"
-  "lwjgl-glfw-$LWJGL_VERSION-natives-linux.jar"
-  "lwjgl-opengl-$LWJGL_VERSION-natives-linux.jar"
-  "lwjgl-stb-$LWJGL_VERSION-natives-linux.jar"
-)
+APP_NAME="The Mechanist"
+VENDOR="The Mechanist Project"
+
+usage() {
+    cat <<'EOF'
+Usage: build-linux-installers.sh [options]
+
+Options:
+  --distribution PATH    Verified linux-x64 canonical distribution.
+  --package-types LIST   Comma-separated: app-image,deb,rpm.
+  --output PATH          Installer output directory.
+  --help                 Show this help.
+
+Without --distribution, the script builds a release-hardened canonical
+distribution through ROOT_build/ci/build_runnable_distribution.py.
+EOF
+}
+
+while [[ $# -gt 0 ]]; do
+    case "$1" in
+        --distribution) DISTRIBUTION_ROOT="$2"; shift 2 ;;
+        --package-types) PACKAGE_TYPES="$2"; shift 2 ;;
+        --output) DIST_DIR="$2"; shift 2 ;;
+        --help|-h) usage; exit 0 ;;
+        *) echo "Unknown option: $1" >&2; usage >&2; exit 2 ;;
+    esac
+done
 
 require_tool() {
-    local tool="$1"
-    if ! command -v "$tool" >/dev/null 2>&1; then
-        echo "Required tool '$tool' was not found on PATH." >&2
+    command -v "$1" >/dev/null 2>&1 || {
+        echo "Required tool '$1' was not found on PATH." >&2
         exit 2
-    fi
+    }
 }
 
-valid_jar() {
-    local file="$1"
-    [[ -f "$file" ]] || return 1
-    [[ "$(wc -c < "$file" 2>/dev/null || echo 0)" -ge 128 ]] || return 1
-    python3 - "$file" <<'PY' >/dev/null 2>&1
-import sys
-from pathlib import Path
-p=Path(sys.argv[1])
-sys.exit(0 if p.read_bytes()[:4] == b"PK\x03\x04" else 1)
-PY
-}
-
-sha256_file() { sha256sum "$1" | awk '{print tolower($1)}'; }
-relative_path() { python3 - "$1" "$2" <<'PY'
-import os, sys
-print(os.path.relpath(sys.argv[2], sys.argv[1]).replace(os.sep, '/'))
-PY
-}
-
-stage_runtime_dependencies() {
-    rm -rf "$DEPENDENCY_STAGE_DIR"
-    mkdir -p "$DEPENDENCY_STAGE_DIR" "$SUPPORT_LIB_DIR"
-    mvn -B -DincludeScope=runtime -Dmdep.copyPom=false -DoutputDirectory="$DEPENDENCY_STAGE_DIR" dependency:copy-dependencies
-    cp -a "$DEPENDENCY_STAGE_DIR"/. "$SUPPORT_LIB_DIR"/
-    local missing=() required hit found
-    for required in "${REQUIRED_LWJGL_FILES[@]}"; do
-        found=0
-        while IFS= read -r -d '' hit; do
-            if valid_jar "$hit"; then found=1; break; fi
-        done < <(find "$SUPPORT_LIB_DIR" -type f -name "$required" -print0 2>/dev/null)
-        if [[ "$found" -eq 0 ]]; then missing+=("$required"); fi
-    done
-    if [[ "${#missing[@]}" -gt 0 ]]; then
-        echo "Packaged Linux LWJGL runtime is incomplete. Missing or invalid:" >&2
-        printf '  %s\n' "${missing[@]}" >&2
-        exit 23
-    fi
-    echo "Launcher-managed Linux support libraries staged in $SUPPORT_LIB_DIR"
-}
-
-stage_launcher_profile_packages() {
-    if [[ ! -d "$LAUNCHER_PROFILE_SOURCE_DIR" ]]; then
-        echo "Missing launcher profile package source directory: $LAUNCHER_PROFILE_SOURCE_DIR" >&2
-        exit 24
-    fi
-    if [[ ! -f "$LAUNCHER_ASSET_STAGER" ]]; then
-        echo "Missing launcher asset staging helper: $LAUNCHER_ASSET_STAGER" >&2
-        exit 24
-    fi
-    python3 "$LAUNCHER_ASSET_STAGER" --project-root "$PROJECT_ROOT" --asset-root client/assets --launcher-package-root launcher/profile-packages --allow-missing
-    local dest="$LAUNCHER_PACKAGE_DIR/profile-packages"
-    rm -rf "$dest"
-    mkdir -p "$LAUNCHER_PACKAGE_DIR"
-    cp -a "$LAUNCHER_PROFILE_SOURCE_DIR" "$dest"
-    echo "Launcher profile packages staged in $dest"
-}
-
-stage_client_runtime_assets() {
-    local source="$PROJECT_ROOT/client/assets"
-    if [[ ! -d "$source" ]]; then
-        echo "Missing client asset source directory: $source" >&2
-        exit 25
-    fi
-    rm -rf "$CLIENT_ASSET_DIR"
-    mkdir -p "$CLIENT_PACKAGE_DIR"
-    cp -a "$source" "$CLIENT_PACKAGE_DIR/"
-    echo "Client runtime assets staged in $CLIENT_ASSET_DIR"
-    local name client_source
-    for name in config settings profiles modding; do
-        client_source="$PROJECT_ROOT/client/$name"
-        if [[ -e "$client_source" ]]; then
-            rm -rf "$CLIENT_PACKAGE_DIR/$name"
-            cp -a "$client_source" "$CLIENT_PACKAGE_DIR/"
-        fi
-    done
-}
-
-write_thin_launcher_manifest() {
-    local client_jar="$1" server_jar="$2"
-    mkdir -p "$MANIFEST_DIR"
-    local client_name server_name support_json entry rel
-    client_name="$(basename "$client_jar")"
-    server_name="$(basename "$server_jar")"
-    support_json=""
-    while IFS= read -r -d '' entry; do
-        rel="$(relative_path "$PACKAGE_CACHE_DIR" "$entry")"
-        local line="      {\"path\": \"$rel\", \"sha256\": \"$(sha256_file "$entry")\", \"size\": $(wc -c < "$entry")}"
-        if [[ -z "$support_json" ]]; then support_json="$line"; else support_json="$support_json,
-$line"; fi
-    done < <(find "$SUPPORT_LIB_DIR" -type f -name '*.jar' -print0 | sort -z)
-    cat > "$MANIFEST_DIR/linux-runtime-manifest.json" <<EOF
-{
-  "schema": 2,
-  "distribution_model": "installer-thin-launcher-client-server",
-  "version": "$APP_VERSION",
-  "platform": "linux-x64",
-  "launcher": {
-    "role": "installed-orchestrator",
-    "main_class": "mechanist.launcher.MechanistLauncherApp",
-    "profile_packages": "packages/launcher/profile-packages",
-    "owns": ["wrapper-detection", "fallback-profile-generation", "server-join-identity-bridge", "manifest-verification", "package-acquisition", "update", "rollback", "launch"]
-  },
-  "client": {
-    "path": "packages/client/$client_name",
-    "sha256": "$(sha256_file "$client_jar")",
-    "size": $(wc -c < "$client_jar"),
-    "main_class": "mechanist.TheMechanist",
-    "launcher_main_class": "mechanist.launcher.ThinLauncherMain"
-  },
-  "client_assets": {
-    "root": "packages/client/assets",
-    "layout": "client-owned loose runtime files"
-  },
-  "server": {
-    "path": "packages/server/$server_name",
-    "sha256": "$(sha256_file "$server_jar")",
-    "size": $(wc -c < "$server_jar"),
-    "main_class": "mechanist.MechanistServerMain"
-  },
-  "launcher_profile": {
-    "fallback_human_portraits": "launcher-human-8x8-v1",
-    "special_portraits": "launcher-special-portraits-v1",
-    "special_name_detection": "launcher-special-name-detection-v1",
-    "special_publish_status": "quarantined-until-cleared",
-    "wrapper_detection": ["steam", "gog", "none"]
-  },
-  "support_libraries": [
-$support_json
-  ]
-}
-EOF
-}
-
-require_tool java
-require_tool javac
-require_tool jlink
-require_tool jpackage
-require_tool mvn
 require_tool python3
+require_tool jpackage
+require_tool tar
+require_tool sha256sum
 
-if [[ -z "${JAVA_HOME:-}" ]]; then echo "JAVA_HOME is not set. Set JAVA_HOME to a Java 17 JDK before packaging." >&2; exit 2; fi
-if [[ ! -d "$JAVA_HOME/jmods" ]]; then echo "JAVA_HOME does not point to a full JDK with jmods: $JAVA_HOME" >&2; exit 2; fi
+BUILDER="$PROJECT_ROOT/ROOT_build/ci/build_runnable_distribution.py"
+VERIFIER="$PROJECT_ROOT/ROOT_build/ci/verify_runnable_distribution.py"
+STAGER="$PROJECT_ROOT/ROOT_build/ci/stage_native_installer_payload.py"
+IMAGE_VERIFIER="$PROJECT_ROOT/ROOT_build/ci/verify_native_installer_image.py"
 
-cd "$PROJECT_ROOT"
-rm -rf "$DIST_DIR" "$RUNTIME_DIR" "$INPUT_DIR"
-mkdir -p "$DIST_DIR" "$INPUT_DIR" "$APP_IMAGE_DIR" "$CLIENT_PACKAGE_DIR" "$SERVER_PACKAGE_DIR" "$SUPPORT_LIB_DIR" "$LAUNCHER_PACKAGE_DIR"
-"$PROJECT_ROOT/scripts/security/generate-sensitive-strings.sh"
-mvn -B -DskipTests package
-(cd "$LAUNCHER_JAVA_DIR" && mvn -B -DskipTests package)
-CLIENT_SOURCE="$TARGET_DIR/TheMechanist-all.jar"
-SERVER_SOURCE="$TARGET_DIR/TheMechanistServer-all.jar"
-if [[ ! -s "$CLIENT_SOURCE" ]]; then echo "Required development client jar was not produced: $CLIENT_SOURCE" >&2; exit 4; fi
-if [[ ! -s "$SERVER_SOURCE" ]]; then echo "Required development server jar was not produced: $SERVER_SOURCE" >&2; exit 4; fi
-if [[ ! -s "$LAUNCHER_JAR_SOURCE" ]]; then echo "Required launcher jar was not produced: $LAUNCHER_JAR_SOURCE" >&2; exit 4; fi
-CLIENT_JAR="$CLIENT_PACKAGE_DIR/TheMechanist.jar"
-SERVER_JAR="$SERVER_PACKAGE_DIR/TheMechanistServer.jar"
-cp "$CLIENT_SOURCE" "$CLIENT_JAR"
-cp "$SERVER_SOURCE" "$SERVER_JAR"
-cp "$LAUNCHER_JAR_SOURCE" "$LAUNCHER_JAR"
-stage_runtime_dependencies
-stage_client_runtime_assets
-stage_launcher_profile_packages
-write_thin_launcher_manifest "$CLIENT_JAR" "$SERVER_JAR"
+for required in "$BUILDER" "$VERIFIER" "$STAGER" "$IMAGE_VERIFIER"; do
+    [[ -f "$required" ]] || {
+        echo "Required release tool is missing: $required" >&2
+        exit 3
+    }
+done
 
-jlink --module-path "$JAVA_HOME/jmods" --add-modules "$CLIENT_MODULES" --output "$RUNTIME_DIR" "${JLINK_OPTIONS[@]}"
+if [[ -z "$DISTRIBUTION_ROOT" ]]; then
+    require_tool mvn
+    require_tool java
+    BUILD_OUTPUT="$PROJECT_ROOT/dist/releases-native"
+    python3 "$BUILDER" \
+        --repo "$PROJECT_ROOT" \
+        --release-hardened \
+        --output "$BUILD_OUTPUT"
+    DISTRIBUTION_ROOT="$(find "$BUILD_OUTPUT" -mindepth 1 -maxdepth 1 -type d -name 'TheMechanist-*-linux-*' | sort | tail -n 1)"
+fi
 
-build_package_type() {
-    local package_type="$1" extra_args=()
-    if [[ -f "$ICON_PATH" ]]; then extra_args+=(--icon "$ICON_PATH"); fi
-    jpackage --type "$package_type" --name "$APP_NAME" --app-version "$APP_VERSION" --vendor "$VENDOR" --description "The Mechanist thin launcher and package orchestrator" --runtime-image "$RUNTIME_DIR" --input "$INPUT_DIR" --main-jar "packages/launcher/MechanistLauncher.jar" --main-class "mechanist.launcher.MechanistLauncherApp" --dest "$DIST_DIR" --install-dir "/opt/the-mechanist-launcher" --linux-shortcut --linux-menu-group "Game" --resource-dir "$PROJECT_ROOT/packaging/linux/resources" "${extra_args[@]}"
+[[ -n "$DISTRIBUTION_ROOT" && -d "$DISTRIBUTION_ROOT" ]] || {
+    echo "Canonical Linux distribution was not found: $DISTRIBUTION_ROOT" >&2
+    exit 4
 }
+DISTRIBUTION_ROOT="$(cd "$DISTRIBUTION_ROOT" && pwd)"
+
+MANIFEST="$DISTRIBUTION_ROOT/manifests/runtime-manifest.json"
+[[ -f "$MANIFEST" ]] || {
+    echo "Canonical runtime manifest is missing: $MANIFEST" >&2
+    exit 4
+}
+
+readarray -t IDENTITY < <(python3 - "$MANIFEST" <<'PY'
+import json, re, sys
+data=json.load(open(sys.argv[1], encoding="utf-8"))
+version=str(data["version"])
+match=re.search(r"\d+(?:\.\d+){0,2}", version)
+native=match.group(0) if match else "0.0.0"
+print(version)
+print(native)
+print(data["platform"])
+print(data["commit"])
+PY
+)
+VERSION="${IDENTITY[0]}"
+NATIVE_VERSION="${IDENTITY[1]}"
+PLATFORM="${IDENTITY[2]}"
+COMMIT="${IDENTITY[3]}"
+[[ "$PLATFORM" == "linux-x64" ]] || {
+    echo "Linux native packaging requires linux-x64, found $PLATFORM." >&2
+    exit 4
+}
+
+rm -rf "$DIST_DIR"
+mkdir -p "$DIST_DIR"
+PAYLOAD_DIR="$PROJECT_ROOT/build/native-installer/linux/payload"
+STAGE_REPORT="$DIST_DIR/staging-linux-x64.json"
+
+python3 "$VERIFIER" "$DISTRIBUTION_ROOT" \
+    --require-release-hardened \
+    --report "$DIST_DIR/source-verification-linux-x64.json"
+python3 "$STAGER" "$DISTRIBUTION_ROOT" \
+    --output "$PAYLOAD_DIR" \
+    --expected-platform linux-x64 \
+    --report "$STAGE_REPORT"
+
+RUNTIME_IMAGE="$DISTRIBUTION_ROOT/runtime"
+[[ -x "$RUNTIME_IMAGE/bin/java" ]] || {
+    echo "Canonical Linux runtime image is incomplete: $RUNTIME_IMAGE" >&2
+    exit 5
+}
+
+ICON_ARGS=()
+for candidate in \
+    "$PROJECT_ROOT/PACKAGE_client/assets/app/icons/the-mechanist-256.png" \
+    "$PROJECT_ROOT/client/assets/app/icons/the-mechanist-256.png"; do
+    if [[ -f "$candidate" ]]; then
+        ICON_ARGS=(--icon "$candidate")
+        break
+    fi
+done
+
+RESOURCE_ARGS=()
+for candidate in \
+    "$PROJECT_ROOT/PACKAGE_installer/linux/resources" \
+    "$PROJECT_ROOT/packaging/linux/resources"; do
+    if [[ -d "$candidate" ]]; then
+        RESOURCE_ARGS=(--resource-dir "$candidate")
+        break
+    fi
+done
+
+IFS=',' read -r -a REQUESTED_TYPES <<< "$PACKAGE_TYPES"
+NORMALIZED_TYPES=()
+for raw in "${REQUESTED_TYPES[@]}"; do
+    value="$(printf '%s' "$raw" | tr '[:upper:]' '[:lower:]' | xargs)"
+    case "$value" in
+        app-image|deb|rpm) NORMALIZED_TYPES+=("$value") ;;
+        "") ;;
+        *) echo "Unsupported Linux package type: $raw" >&2; exit 2 ;;
+    esac
+done
+[[ ${#NORMALIZED_TYPES[@]} -gt 0 ]] || NORMALIZED_TYPES=(app-image)
+
+COMMON_ARGS=(
+    --name "$APP_NAME"
+    --app-version "$NATIVE_VERSION"
+    --vendor "$VENDOR"
+    --description "The Mechanist limited-alpha launcher and verified package runtime"
+    --runtime-image "$RUNTIME_IMAGE"
+    --input "$PAYLOAD_DIR"
+    --main-jar "launcher/MechanistLauncher.jar"
+    --main-class "mechanist.launcher.MechanistLauncherApp"
+)
+
+APP_IMAGE_DEST="$DIST_DIR/app-image"
+APP_IMAGE_ROOT="$APP_IMAGE_DEST/$APP_NAME"
+APP_IMAGE_BUILT=0
 
 build_app_image() {
-    local extra_args=()
-    if [[ -f "$ICON_PATH" ]]; then extra_args+=(--icon "$ICON_PATH"); fi
-    jpackage --type app-image --name "$APP_NAME" --app-version "$APP_VERSION" --vendor "$VENDOR" --description "The Mechanist thin launcher and package orchestrator" --runtime-image "$RUNTIME_DIR" --input "$INPUT_DIR" --main-jar "packages/launcher/MechanistLauncher.jar" --main-class "mechanist.launcher.MechanistLauncherApp" --dest "$APP_IMAGE_DIR" "${extra_args[@]}"
-    if [[ -d "$APP_IMAGE_DIR/$APP_NAME" ]]; then
-        tar -C "$APP_IMAGE_DIR" -czf "$DIST_DIR/TheMechanist_launcher_linux_portable_${APP_VERSION}.tar.gz" "$APP_NAME"
-    else
-        echo "jpackage app-image did not produce $APP_IMAGE_DIR/$APP_NAME" >&2
-        exit 5
-    fi
+    rm -rf "$APP_IMAGE_DEST"
+    mkdir -p "$APP_IMAGE_DEST"
+    jpackage --type app-image \
+        "${COMMON_ARGS[@]}" \
+        --dest "$APP_IMAGE_DEST" \
+        "${ICON_ARGS[@]}" \
+        "${RESOURCE_ARGS[@]}"
+    [[ -d "$APP_IMAGE_ROOT" ]] || {
+        echo "jpackage did not produce expected image: $APP_IMAGE_ROOT" >&2
+        exit 6
+    }
+    python3 "$IMAGE_VERIFIER" "$APP_IMAGE_ROOT" \
+        --expected-platform linux-x64 \
+        --report "$DIST_DIR/native-image-verification-linux-x64.json"
+    tar -C "$APP_IMAGE_DEST" -czf \
+        "$DIST_DIR/TheMechanist-${VERSION}-linux-x64-native-app-image.tar.gz" \
+        "$APP_NAME"
+    APP_IMAGE_BUILT=1
 }
 
-build_package_type deb
-if command -v rpmbuild >/dev/null 2>&1; then build_package_type rpm; else echo "rpmbuild was not found; DEB was produced and RPM packaging was skipped on this runner." >&2; fi
-build_app_image
-find "$DIST_DIR" -type f ! -name SHA256SUMS.txt -print0 | sort -z | xargs -0 sha256sum > "$DIST_DIR/SHA256SUMS.txt"
+for type in "${NORMALIZED_TYPES[@]}"; do
+    case "$type" in
+        app-image)
+            build_app_image
+            ;;
+        deb)
+            jpackage --type deb \
+                "${COMMON_ARGS[@]}" \
+                --dest "$DIST_DIR" \
+                --install-dir "/opt/the-mechanist" \
+                --linux-shortcut \
+                --linux-menu-group "Game" \
+                "${ICON_ARGS[@]}" \
+                "${RESOURCE_ARGS[@]}"
+            ;;
+        rpm)
+            if command -v rpmbuild >/dev/null 2>&1; then
+                jpackage --type rpm \
+                    "${COMMON_ARGS[@]}" \
+                    --dest "$DIST_DIR" \
+                    --install-dir "/opt/the-mechanist" \
+                    --linux-shortcut \
+                    --linux-menu-group "Game" \
+                    "${ICON_ARGS[@]}" \
+                    "${RESOURCE_ARGS[@]}"
+            else
+                echo "rpmbuild is unavailable; RPM packaging was skipped." >&2
+            fi
+            ;;
+    esac
+done
+
+if [[ "$APP_IMAGE_BUILT" -eq 0 ]]; then
+    build_app_image
+fi
+
+find "$DIST_DIR" -type f ! -name SHA256SUMS.txt -print0 |
+    sort -z |
+    xargs -0 sha256sum > "$DIST_DIR/SHA256SUMS.txt"
+
 cat > "$DIST_DIR/LINUX_INSTALLERS_README.txt" <<EOF
-The Mechanist Linux installer outputs
-====================================
+The Mechanist limited-alpha Linux outputs
+==========================================
 
-Version: $APP_VERSION
+Version: $VERSION
+Native package version: $NATIVE_VERSION
+Commit: $COMMIT
+Platform: $PLATFORM
+Release hardened: true
+Canonical source distribution: $DISTRIBUTION_ROOT
 Distribution model: installer -> thin launcher -> client -> server
-Launcher entrypoint: mechanist.launcher.MechanistLauncherApp
-Package identity manifest: manifests/linux-runtime-manifest.json
-Launcher-managed packages: packages/client, packages/server, packages/support/lib, packages/launcher/profile-packages
-Client runtime assets: packages/client/assets
-Wrapper detection: Steam/GOG/none, evaluated by thin launcher before client start
-Fallback profile generation: launcher-owned, hash-based
-Server join identity bridge: launcher-owned profile hash written before client start
-Launcher portrait/name packages: human 8x8, special portrait manifest, special name detection manifest; special mappings are quarantined until cleared
-LWJGL/support libraries: staged into packages/support/lib at package-build time
-Game-launch dependency downloads: forbidden
 
-Recommended Linux testing order:
-1. Extract the portable launcher tarball and run the launcher image.
-2. Confirm manifests/linux-runtime-manifest.json exists inside the installed image.
-3. Confirm packages/client/TheMechanist.jar and packages/server/TheMechanistServer.jar exist.
-4. Confirm packages/support/lib contains LWJGL core/native jars and runtime dependency jars.
-5. Confirm packages/launcher/profile-packages contains the launcher profile packages and asset-staging report.
-6. Test DEB/RPM installer behavior after portable app-image verification.
+Every native output in this directory was composed from the verified canonical
+release staging tree. The native app image was reopened and checked against the
+launcher manifest after jpackage completed. Mutable saves, profiles, settings,
+logs, cache, mods, and exports remain outside the installed application payload.
+
+Recommended validation order:
+1. Verify SHA256SUMS.txt.
+2. Extract the native app-image archive and start The Mechanist.
+3. Confirm launcher package verification succeeds.
+4. Run a single-player save/resume test.
+5. Run the independent host bind and packaged client connection tests.
 EOF
-echo "Linux installers written to $DIST_DIR"
+
+echo "Linux native package convergence complete: $DIST_DIR"
